[package]
name = "blue-planet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Remember to revert this before releasing your game! Otherwise you will need to include libbevy_dylib alongside your game if you want it to run.
bevy = { version = "0.9.1", features = ["dynamic"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3